# rocoma_example

./: README.md
rocoma_example/: CMakeLists.txt  package.xml
rocoma_example/include/rocoma_example/: RocomaExample.hpp
rocoma_example/launch/: rocoma_example.launch  rocoma_example_gdb.launch
rocoma_example/src/: RocomaExample.cpp  rocoma_example.cpp  rocoma_example_node.cpp
rocoma_ros_example/: CMakeLists.txt  package.xml
rocoma_ros_example/include/rocoma_ros_example/: RocomaRosExample.hpp
rocoma_ros_example/launch/: rocoma_ros_example.launch  rocoma_ros_example_gdb.launch
rocoma_ros_example/param/: default_parameters.yaml  default_publishers.yaml  default_services.yaml  default_subscribers.yaml
rocoma_ros_example/src/: RocomaRosExample.cpp  rocoma_ros_example_node.cpp
rocomaex_ctrl1/: CMakeLists.txt  package.xml  rocoma_plugin.xml  rocomaex_ctrl1_plugin.xml
rocomaex_ctrl1/include/rocomaex_ctrl1/: Controller1.hpp
rocomaex_ctrl1/src/: Controller1.cpp  rocomaex_ctrl1_plugin.cpp
rocomaex_ctrl2/: CMakeLists.txt  package.xml  rocoma_plugin.xml  rocomaex_ctrl2_plugin.xml
rocomaex_ctrl2/include/rocomaex_ctrl2/: Controller2.hpp
rocomaex_ctrl2/src/: Controller2.cpp  rocomaex_ctrl2_plugin.cpp  rocomaex_ctrl3_plugin.cpp  rocomaex_ctrl4_plugin.cpp
rocomaex_emgcy_ctrl1/: CMakeLists.txt  package.xml  rocoma_plugin.xml  rocomaex_emgcy_ctrl1_plugin.xml
rocomaex_emgcy_ctrl1/include/rocomaex_emgcy_ctrl1/: EmergencyController1.hpp
rocomaex_emgcy_ctrl1/src/: EmergencyController1.cpp  rocomaex_emgcy_ctrl1_plugin.cpp
rocomaex_emgcy_ctrl2/: CMakeLists.txt  package.xml  rocoma_plugin.xml  rocomaex_emgcy_ctrl2_plugin.xml
rocomaex_emgcy_ctrl2/include/rocomaex_emgcy_ctrl2/: EmergencyController2.hpp
rocomaex_emgcy_ctrl2/src/: EmergencyController2.cpp  rocomaex_ctrl5_plugin.cpp  rocomaex_emgcy_ctrl2_plugin.cpp
rocomaex_failproof_ctrl/: CMakeLists.txt  package.xml
rocomaex_failproof_ctrl/include/rocomaex_failproof_ctrl/: FailproofController.hpp
rocomaex_failproof_ctrl/src/: FailproofController.cpp
rocomaex_failproof_ctrl1/: CMakeLists.txt  package.xml  rocoma_plugin.xml  rocomaex_failproof_ctrl1_plugin.xml
rocomaex_failproof_ctrl1/include/rocomaex_failproof_ctrl1/: FailproofController1.hpp
rocomaex_failproof_ctrl1/src/: FailproofController1.cpp  rocomaex_failproof_ctrl1_plugin.cpp
rocomaex_model/: CMakeLists.txt  package.xml  rocoma_plugin.xml
rocomaex_model/include/rocomaex_model/: Command.hpp  MySharedModule.hpp  MySwapState.hpp  RocoCommand.hpp  RocoState.hpp  State.hpp
rocomaex_model/src/: rocomaex_shared_module_plugin.cpp
rocomaex_ros_ctrl1/: CMakeLists.txt  package.xml  rocoma_plugin.xml  rocomaex_ros_ctrl1_plugin.xml
rocomaex_ros_ctrl1/include/rocomaex_ros_ctrl1/: ControllerRos1.hpp
rocomaex_ros_ctrl1/src/: ControllerRos1.cpp  rocomaex_ros_ctrl1_plugin.cpp
rocomaex_ros_emgcy_ctrl1/: CMakeLists.txt  package.xml  rocoma_plugin.xml  rocomaex_ros_emgcy_ctrl1_plugin.xml
rocomaex_ros_emgcy_ctrl1/include/rocomaex_ros_emgcy_ctrl1/: EmergencyControllerRos1.hpp
rocomaex_ros_emgcy_ctrl1/src/: EmergencyControllerRos1.cpp  rocomaex_ros_emgcy_ctrl1_plugin.cpp
