<?xml version="1.0"?>
<package format="2">

  <name>rocoma_example</name>
  <version>0.0.0</version>
  <description>The rocoma_example package</description>
  <maintainer email="ghottiger@anybotics.com">Gabriel Hottiger</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_logger</depend>
  <depend>roco</depend>
  <depend>rocoma</depend>
  <depend>rocomaex_model</depend>
  <depend>rocomaex_ctrl1</depend>
  <depend>rocomaex_ctrl2</depend>
  <depend>rocomaex_emgcy_ctrl1</depend>
  <depend>rocomaex_emgcy_ctrl2</depend>
  <depend>rocomaex_failproof_ctrl1</depend>

</package>
