<?xml version="1.0" encoding="UTF-8"?>
<package format="2">

  <name>rocomaex_ctrl2</name>
  <version>0.1.1</version>
  <description>rocomaex_ctrl2 provides a robot controller that ...</description>
  <maintainer email="avijayan@anybotics.com">Aravind Vijayan</maintainer>
  <maintainer email="fgiraldez@anybotics.com">Francisco Giráldez Gámez</maintainer>
  <license>BSD</license>
  <author email="ghottiger@anybotics.com">Gabriel Hottiger</author>
  <url>https://github.com/anybotics/rocoma_example</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roco</depend>
  <depend>rocomaex_model</depend>
  <depend>message_logger</depend>
  <depend>rocoma_plugin</depend>
  <depend>rocomaex_ctrl1</depend>
  <depend>rocomaex_emgcy_ctrl1</depend>

  <export>
    <rocoma_plugin plugin="${prefix}/rocoma_plugin.xml"/>
  </export>

</package>
