<?xml version="1.0"?>
<package format="2">

  <name>rocomaex_emgcy_ctrl1</name>
  <version>0.0.0</version>
  <description>The rocomaex_emgcy_ctrl1 package</description>
  <maintainer email="gabriel.hottiger@mavt.ethz.ch">Gabriel Hottiger</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pluginlib</depend>
  <depend>roco</depend>
  <depend>message_logger</depend>
  <depend>rocomaex_model</depend>

</package>
