<?xml version="1.0"?>
<package format="2">

  <name>rocomaex_emgcy_ctrl2</name>
  <version>0.0.0</version>
  <description>Second Example Emergency Controller</description>
  <maintainer email="gabriel.hottiger@mavt.ethz.ch">Gabriel Hottiger</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roco</depend>
  <depend>message_logger</depend>
  <depend>rocomaex_model</depend>
  <depend>rocoma_plugin</depend>

  <!-- IMPORTANT: The xml file has to be imported here. -->
  <!-- All base classes are located in rocoma_plugin. -->
  <!-- When defining your own controller package just adapt the xml path of the plugin description. -->
  <export>
    <rocoma_plugin plugin="${prefix}/rocomaex_emgcy_ctrl2_plugin.xml" />
  </export>

</package>
