<?xml version="1.0" encoding="UTF-8"?>
<package format="2">

  <name>rocomaex_emgcy_ctrl2</name>
  <version>0.1.1</version>
  <description>rocomaex_emgcy_ctrl2 provides a robot controller that ...</description>
  <maintainer email="ghottiger@anybotics.com">Gabriel Hottiger</maintainer>
  <license>TODO</license>
  <author email="ghottiger@anybotics.com">Gabriel Hottiger</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roco</depend>
  <depend>rocomaex_model</depend>
  <depend>message_logger</depend>
  <depend>rocoma_plugin</depend>

  <export>
    <rocoma_plugin plugin="${prefix}/rocoma_plugin.xml"/>
  </export>

</package>
