<?xml version="1.0"?>
<package format="2">

  <name>rocomaex_failproof_ctrl1</name>
  <version>0.0.0</version>
  <description>First Failproof Controller</description>
  <author email="ghottiger@anybotics.com">Gabriel Hottiger</author>
  <maintainer email="avijayan@anybotics.com">Aravind Vijayan</maintainer>
  <maintainer email="fgiraldez@anybotics.com">Francisco Giráldez Gámez</maintainer>
  <license>BSD</license>
  <url>https://github.com/anybotics/rocoma_example</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roco</depend>
  <depend>message_logger</depend>
  <depend>rocomaex_model</depend>
  <depend>rocoma_plugin</depend>

  <!-- IMPORTANT: The xml file has to be imported here. -->
  <!-- All base classes are located in rocoma_plugin. -->
  <!-- When defining your own controller package just adapt the xml path of the plugin description. -->
  <export>
    <rocoma_plugin plugin="${prefix}/rocoma_plugin.xml" />
  </export>

</package>
