<?xml version="1.0"?>
<package format="2">

  <name>rocomaex_model</name>
  <version>0.0.0</version>
  <description>The rocomaex_model package</description>
  <maintainer email="ghottiger@anybotics.com">Gabriel Hottiger</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roco</depend>
  <depend>message_logger</depend>
  <depend>rocoma_plugin</depend>

  <export>
    <rocoma_plugin plugin="${prefix}/rocoma_plugin.xml"/>
  </export>

</package>
