<?xml version="1.0"?>
<package format="2">

  <name>rocomaex_model</name>
  <version>0.0.0</version>
  <description>The rocomaex_model package</description>
  <maintainer email="avijayan@anybotics.com">Aravind Vijayan</maintainer>
  <maintainer email="fgiraldez@anybotics.com">Francisco Giráldez Gámez</maintainer>
  <license>BSD</license>
  <url>https://github.com/anybotics/rocoma_example</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roco</depend>
  <depend>message_logger</depend>
  <depend>rocoma_plugin</depend>

  <export>
    <rocoma_plugin plugin="${prefix}/rocoma_plugin.xml"/>
  </export>

</package>
