<?xml version="1.0"?>
<package format="2">

  <name>rocomaex_ros_emgcy_ctrl1</name>
  <version>0.0.0</version>
  <description>First Example Emergency Ros Controller</description>
  <maintainer email="gabriel.hottiger@mavt.ethz.ch">Gabriel Hottiger</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roco</depend>
  <depend>roco_ros</depend>
  <depend>message_logger</depend>
  <depend>rocomaex_model</depend>
  <depend>rocoma_plugin</depend>

  <!-- IMPORTANT: The xml file has to be imported here. -->
  <!-- All base classes are located in rocoma_plugin. -->
  <!-- When defining your own controller package just adapt the xml path of the plugin description. -->
  <export>
    <rocoma_plugin plugin="${prefix}/rocomaex_ros_emgcy_ctrl1_plugin.xml" />
  </export>

</package>
